# rust-test

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
