[package]
name = "rust-test"
version = "0.1.0"
authors = ["keikun1215"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenvy = "0.15.6"
poise = { version = "0.4.1", features = ["gateway"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
